clusters/production/automation/zigbee2mqtt/zigbee2mqtt-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
  namespace: default
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - zigbee2mqtt.rees.ca
  rules:
  - backendRefs:
    - name: zigbee2mqtt
      port: 8080
